--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="socials">
                     <h3 class="title">Socials</h3>
                     <div class="Socials_items">
-                        <a href="https://github.com/PTORE?tab=repositories" target="_blank" class="Social_item">
+                        <a href="https://github.com/PTORE/RESUME-BUILDING" target="_blank" class="Social_item">
                             <i data-feather="github"></i>
                             <!--<span>github</span>-->
                         </a>
