--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div class="container">
             <div class="profile">
                 <div class="profile_container">
-                    <div class="profile_profileImg">
+                    <div class="profile_profileImg"> <!---->
+                        <span class="Passport">
                         <img src="./images/Passport.jpg" alt="">
+                        </span> <!---->
                     </div>
                     <div>
                         <h1 class="profile_name">
