--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="profile_container">
                     <div class="profile_profileImg"> <!---->
                         <span class="Passport">
-                        <img src="./images/Passport.jpg" alt="">
+                        <img src="./images/Passport.JPG" alt="">
                         </span> <!---->
                     </div>
                     <div>
